@@ -1,3 +1,7 @@
+2023-Sep-24 Struan Robertson
+
+		* GaussianDistFragmentation.cpp: Revised functional form.
+
 2023-Sep-09 Struan Robertson
 
 		* MesmerILT.cpp: Further changes in for secondary activation energy parsing.
